// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer 1`] = `Object {}`;

exports[`reducer 2`] = `
Object {
  "AVjUDBiSiXOcXjpycvde": Object {
    "category": "VERSION",
    "key": "AVjUDBiSiXOcXjpycvde",
    "name": "2.18-SNAPSHOT",
  },
  "AVkWNYNYr4pSN7TrXcjY": Object {
    "category": "OTHER",
    "key": "AVkWNYNYr4pSN7TrXcjY",
    "name": "foo",
  },
}
`;

exports[`reducer 3`] = `
Object {
  "AVjUDBiSiXOcXjpycvde": Object {
    "category": "VERSION",
    "key": "AVjUDBiSiXOcXjpycvde",
    "name": "2.18-SNAPSHOT",
  },
  "AVkWNYNYr4pSN7TrXcjY": Object {
    "category": "OTHER",
    "key": "AVkWNYNYr4pSN7TrXcjY",
    "name": "foo",
  },
  "AVkWcQ8Hr4pSN7TrXcjZ": Object {
    "category": "OTHER",
    "key": "AVkWcQ8Hr4pSN7TrXcjZ",
    "name": "custom",
  },
}
`;

exports[`reducer 4`] = `
Object {
  "AVjUDBiSiXOcXjpycvde": Object {
    "category": "VERSION",
    "key": "AVjUDBiSiXOcXjpycvde",
    "name": "2.18-SNAPSHOT",
  },
  "AVkWNYNYr4pSN7TrXcjY": Object {
    "category": "OTHER",
    "key": "AVkWNYNYr4pSN7TrXcjY",
    "name": "foo",
  },
  "AVkWcQ8Hr4pSN7TrXcjZ": Object {
    "category": "OTHER",
    "key": "AVkWcQ8Hr4pSN7TrXcjZ",
    "name": "new name",
  },
}
`;

exports[`reducer 5`] = `
Object {
  "AVjUDBiSiXOcXjpycvde": Object {
    "category": "VERSION",
    "key": "AVjUDBiSiXOcXjpycvde",
    "name": "2.18-SNAPSHOT",
  },
  "AVkWNYNYr4pSN7TrXcjY": Object {
    "category": "OTHER",
    "key": "AVkWNYNYr4pSN7TrXcjY",
    "name": "foo",
  },
}
`;
